Fix stretched images on iOS phones

--- a/themes/my-theme/source/css/_base.scss
+++ b/themes/my-theme/source/css/_base.scss
@@ -65,6 +65,7 @@ main {
 
 picture {
   display: flex;
+  flex-direction: row;
 }
 
 p {
